tests/sksl/errors/MatrixToVectorCastBoolean.glsl
### Compilation failed:

error: 4: 'half2x2' is not a valid parameter to 'bool' constructor
error: 5: 'half2x2' is not a valid parameter to 'bool2' constructor
error: 6: 'half2x2' is not a valid parameter to 'bool3' constructor
3 errors
